[tool.poetry]
name = "plannerchatbot"
version = "0.1.0"
description = ""
authors = ["nik <alopexplenus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
